--- a/A2/mathserver/Makefile
+++ b/A2/mathserver/Makefile
@@ -1,5 +1,8 @@
+matinv:
+	gcc -Wall ./src/matrix_inverse.c -o ./src/matinv
+
 kmeans: 
-	gcc ./src/kmeans.c -o ./src/kmeans
+	gcc -Wall ./src/kmeans.c -o ./src/kmeans
 
 clean:
-	rm -f *.o a.out ./src/kmeans ./../computed_results/kmeans-results.txt
+	rm -f *.o a.out ./src/kmeans ./src/matinv ./../computed_results/kmeans-results.txt
