char execute command fixes

--- a/A2/mathserver/Makefile
+++ b/A2/mathserver/Makefile
@@ -2,7 +2,8 @@ all:
 	rm -f client server matinv kmeans
 	gcc -w -O2 ./src/client.c -o client
 	gcc -w -O2 -lpthread ./src/server.c -o server
-	gcc -w -O2 ./src/matinv-par.c -o matinv
+	gcc -w -O2 -pthread ./src/matinv-par.c -o matinv
+	gcc -w -O2 ./src/kmeans.c -o kmeans
 	
 client:
 	gcc -w -O2 ./src/client.c -o client 
