working factorial in Intel syntax
'gcc -no-pie -fPIC factorial_Intel.s -o assemblytest'
(note that after printing "fak=120", the program awaits user input of at most 4 chars before it exits)

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,6 @@ A2/mathserver/kmeans
 A2/mathserver/matinv
 A2/mathserver/server
 A2/computed_results/*
-.vscode/settings.json
+.vscode/*
+A3/assemblytest
+A3/bin/*
