move .c & .h files to lexyacc-code/
Renamed calc3b to calc3i, and added the original calc3b so that we can compare the old pseudo code with our version. Checking number of args for x86-64-driver.sh. We might want to validate that the input file has a '.calc' ending? Executing Makefile in x86-64-driver.sh.

--- a/A3/Makefile
+++ b/A3/Makefile
@@ -1,4 +1,5 @@
 all:
-	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./calc3a.c -o ./bin/calc3x.exe
-	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./calc3b.c -o ./bin/calc3y.exe
-	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./calc3g.c -o ./bin/calc3z.exe		
+	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3a.c -o ./bin/calc3w.exe
+	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3b.c -o ./bin/calc3x.exe
+	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3i.c -o ./bin/calc3y.exe
+	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3g.c -o ./bin/calc3z.exe
