--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ A2/mathserver/matinv
 A2/mathserver/server
 A2/computed_results/*
 .vscode/*
-A3/assemblytest
+assemblytest
 A3/bin/*
+A3/lexyacc-code/y.tab.o
+A3/lexyacc-code/lex.yy.o
