--- a/A3/lexyacc-code/build
+++ b/A3/lexyacc-code/build
@@ -5,7 +5,8 @@
 bison -y -d calc3.y
 flex calc3.l
 gcc -c y.tab.c lex.yy.c
-gcc y.tab.o lex.yy.o calc3a.c -o ../bin/calc3a.exe
-gcc y.tab.o lex.yy.o calc3b.c -o ../bin/calc3b.exe
-gcc y.tab.o lex.yy.o calc3g.c -o ../bin/calc3g.exe
-gcc y.tab.o lex.yy.o calc3i.c -o ../bin/calc3i.exe
+
+# gcc y.tab.o lex.yy.o calc3a.c -o ../bin/calc3a.exe
+# gcc y.tab.o lex.yy.o calc3b.c -o ../bin/calc3b.exe
+# gcc y.tab.o lex.yy.o calc3g.c -o ../bin/calc3g.exe
+# gcc y.tab.o lex.yy.o calc3i.c -o ../bin/calc3i.exe
