Dedicated build folder for x86-64-driver output
Building library in Makefile. Added some TODOs for higher grades.
For D grade we should probably save and restore registers rdi and rsi when using them in calc3i.c?

--- a/A3/Makefile
+++ b/A3/Makefile
@@ -1,5 +1,6 @@
 all:
-	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3a.c -o ./bin/calc3w.exe
-	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3b.c -o ./bin/calc3x.exe
-	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3i.c -o ./bin/calc3y.exe
-	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3g.c -o ./bin/calc3z.exe
+	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3a.c -o ./bin/calc3a.exe
+	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3b.c -o ./bin/calc3b.exe
+	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3g.c -o ./bin/calc3g.exe
+	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3i.c -o ./bin/calc3i.exe
+	ar -crs ./lib/libutil.a ./src/fact.s ./src/gcd.s
