--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ A2/mathserver/matinv
 A2/mathserver/server
 A2/computed_results/*
 .vscode/*
-assemblytest
 A3/bin/*
+~A3/bin/calc3i.exe
+A3/build/*
 A3/lexyacc-code/y.tab.o
 A3/lexyacc-code/lex.yy.o
+A3/testprogs/assemblytest
