--- a/A3/Makefile
+++ b/A3/Makefile
@@ -3,4 +3,6 @@ all:
 	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3b.c -o ./bin/calc3b.exe
 	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3g.c -o ./bin/calc3g.exe
 	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3i.c -o ./bin/calc3i.exe
-	ar -crs ./lib/libutil.a ./src/fact.s ./src/gcd.s
+	gcc -c  ./src/gcd.s  -o ./build/gcd.o
+	gcc -c  ./src/fact.s -o ./build/fact.o
+	ar -crs ./lib/libutil.a ./build/fact.o ./build/gcd.o
