makefile only calc3i.c, silent make

--- a/A3/Makefile
+++ b/A3/Makefile
@@ -1,7 +1,7 @@
 all:
-	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3a.c -o ./bin/calc3a.exe
-	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3b.c -o ./bin/calc3b.exe
-	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3g.c -o ./bin/calc3g.exe
+	# gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3a.c -o ./bin/calc3a.exe
+	# gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3b.c -o ./bin/calc3b.exe
+	# gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3g.c -o ./bin/calc3g.exe
 	gcc ./lexyacc-code/y.tab.o ./lexyacc-code/lex.yy.o ./lexyacc-code/calc3i.c -o ./bin/calc3i.exe
 	gcc -c  ./src/gcd.s  -o ./build/gcd.o
 	gcc -c  ./src/fact.s -o ./build/fact.o
