fix file sending and recieving, everything works now

--- a/A2/mathserver/Makefile
+++ b/A2/mathserver/Makefile
@@ -4,7 +4,13 @@ all:
 	gcc -w -O2 ./src/server.c -o server
 	gcc -w -O2 -pthread ./src/matinv-par.c -o matinv
 	gcc -w -O2 -pthread ./src/kmeans-par.c -o kmeans 
-# Undersök pthread v lpthread, får en massa undefined references med lpthread
+# TODO Undersök pthread v lpthread, får en massa undefined references med lpthread
+tests:
+	rm -f seq_kmeans seq_matinv matinv kmeans
+	gcc -w -O2 -pthread ./src/matinv-par.c -o matinv
+	gcc -w -O2 -pthread ./src/kmeans-par.c -o kmeans 
+	gcc -w -O2 ./src/matrix_inverse.c -o seq_matinv
+	gcc -w -O2 ./src/kmeans.c -o seq_kmeans
 	
 client:
 	gcc -w -O2 ./src/client.c -o client 
@@ -19,10 +25,10 @@ kmeans-par:
 	gcc -w -O2 -pthread ./src/kmeans-par.c -o kmeans
 
 matinv:
-	gcc -w -O2 ./src/matrix_inverse.c -o matinv
+	gcc -w -O2 ./src/matrix_inverse.c -o seq_matinv
 
 kmeans: 
-	gcc -w -O2 ./src/kmeans.c -o kmeans
+	gcc -w -O2 ./src/kmeans.c -o seq_kmeans
 
 clean:
 	rm -f client kmeans matinv server 
