Start only parallelize parts of algos

--- a/A2/mathserver/Makefile
+++ b/A2/mathserver/Makefile
@@ -9,8 +9,8 @@ all:
 
 tests:
 	rm -f seq_kmeans seq_matinv matinv kmeans
-	gcc -w -O2 ./src/matinv-par.c -o matinv -lpthread
-	gcc -w -O2 ./src/kmeans-par.c -o kmeans -lpthread 
+	gcc -w -O2 -pthread ./src/matrix_new.c -o matinv
+	gcc -w -O2 -pthread ./src/kmeans-par.c -o kmeans 
 	gcc -w -O2 ./src/matrix_inverse.c -o matinv-seq
 	gcc -w -O2 ./src/kmeans.c -o kmeans-seq
 	
