--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ A3/build/*
 A3/lexyacc-code/y.tab.o
 A3/lexyacc-code/lex.yy.o
 A3/testprogs/assemblytest
+A2/mathserver/matinv-seq
+A2/mathserver/kmeans-seq
