Restore original src files
Downloaded kmeans.c, matrix_inverse.c, and kmeans-viz.py again with compiler warnings, unused variables and all. Just to make sure we compare parallel versions with the correct results. Added reminder to handle the calculations for datapoints per thread in matinv.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ A3/lexyacc-code/lex.yy.o
 A3/testprogs/assemblytest
 A2/mathserver/matinv-seq
 A2/mathserver/kmeans-seq
+A2/.vscode/c_cpp_properties.json
