Create server util module

--- a/A2/mathserver/Makefile
+++ b/A2/mathserver/Makefile
@@ -1,14 +1,14 @@
 all:
 	rm -f client server matinv kmeans
 	gcc -w -O2 ./src/client.c ./src/file_util.c -o client
-	gcc -w -O2 ./src/server.c ./src/file_util.c -o server
+	gcc -w -O2 ./src/server.c ./src/file_util.c ./src/server_util.c -o server
 	gcc -w -O2 -pthread ./src/matinv-par.c -o matinv
 	gcc -w -O2 -pthread ./src/kmeans-par.c -o kmeans
 
 tests:
 	rm -f kmeans-seq matinv-seq matinv kmeans
 	gcc -w -O2 -pthread ./src/matrix_new.c -o matinv
-	gcc -w -O2 -pthread ./src/kmeans-par.c -o kmeans 
+	gcc -w -O2 -pthread ./src/kmeans-par.c -o kmeans
 	gcc -w -O2 ./src/matrix_inverse.c -o matinv-seq
 	gcc -w -O2 ./src/kmeans.c -o kmeans-seq
 	
@@ -16,7 +16,7 @@ client:
 	gcc -w -O2 ./src/client.c ./src/file_util.c -o client 
 
 server:
-	gcc -w -O2 ./src/server.c ./src/file_util.c -o server
+	gcc -w -O2 ./src/server.c ./src/file_util.c ./src/server_util.c -o server
 
 matinv: # parallel
 	gcc -w -O2 -pthread ./src/matinv-par.c -o matinv
